--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -7,10 +6,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<form id="form">
+		<label for="decimal-number">Enter a decimal number:</label>
+		<input type="text" id="decimal-number">
+		<button type="button" onclick="convertDecimalToBinary()">Convert</button>
+	</form>
+	<div id="result"></div>
 
+	<script src="script.js"></script>
 </body>
 
 </html>
